--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
                 "ms-vscode.powershell",
                 "hashicorp.terraform",
                 "esbenp.prettier-vscode",
-                "tfsec.tfsec"
+                "tfsec.tfsec",
+                "ms-dotnettools.csharp"
             ]
         }
     },
